@@ -2,13 +2,14 @@ package Constant::FromGlobal;
 
 use strict;
 use warnings;
+use 5.8.0;
 
 use Carp;
 use Data::OptList;
 
 use constant ();
 
-our $VERSION = "0.03";
+our $VERSION = "0.04";
 
 sub import {
     my ( $class, @args ) = @_;
