@@ -3,6 +3,7 @@ Revision history for perl module Constant::FromGlobal
 0.04 2014-01-05
     - Added Carp, constant and warnings as explicit prereqs in Makefile.PL
     - Added README
+    - Specified 5.8.0 as the min version of Perl (in Makefile.PL and module)
 
 0.03 2013-07-14
     - Added information about license and repository to Makefile.PL,
